# empm

./: .gitignore  404.html  CNAME  MANIFEST.in  README.md  blog.html  codecov.yml  depend.toml  empm.toml  index.html  markdown-page.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml  deploy-release.yaml  deploy-website.yml  upload-python-package.yaml
assets/js/: 0058b4c6.810e5cdc.js  01a85c17.552b5d3c.js  0e384e19.cd89a000.js  17896441.ef71fe10.js  1df93b7f.0dedb730.js  1f391b9e.2d4401b1.js  242.6c041cdf.js  3217192f.03f09154.js  3a2db09e.67812915.js  4d54d076.75db1560.js  59362658.7c822054.js  5e90a9b3.96a53f51.js  60875e34.a5150b69.js  6875c492.6607641d.js  73664a40.f7b3837a.js  7661071f.a551d9f0.js  814f3328.4c70ef51.js  8717b14a.0a689b94.js  925b3f96.f59091a8.js  a6aa9e1f.9089c48d.js  a7bd4aaa.6f7eba58.js  a94703ab.68fcd1a9.js  acecf23e.51ada374.js  c15d9823.90025b45.js  ccc49370.2137cb6f.js  d9f32620.1709106b.js  e273c56f.a2307897.js  e5aefb32.53335e24.js  f4f34a3a.13a749d9.js  f81c1134.12cc7a3d.js  f82cd581.459b5e98.js  main.f51a8572.js  runtime~main.2b830088.js
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
blog/tags/: docusaurus.html  facebook.html  hello.html  hola.html
cepack/: __init__.py  main.py  utility.py
docs/: contributing.html  intro.html  tutorial.html
empm/: __init__.py  __main__.py  main.py  utility.py
empm/_internal/cli/: main.py
empm/_internal/command/: add.py  home.py  install.py  new.py  remove.py
empm/_internal/web/: README.md  main.py
empm/_internal/web/frontend/: package.json
empm/_internal/web/frontend/src/: App.css  index.css
empm/_internal/web/html/src/pages/: Home.css
src/cepack/: __init__.py  main.py  utility.py
test/: __init__.py  depend.toml  download_repo_test.py  test.py  test_ci.py  test_cli.py  test_download_repo.py  test_utility.py  test_web.py
test/utility/: __init__.py  env_manage.py
web/: main.py
web/html/: index.html  package.json
web/html/src/pages/: Home.tsx
website/: README.md  docusaurus.config.ts  package-lock.json  package.json
website/docs/: contributing.md  intro.md  tutorial.md
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: index.tsx
